# Web-Server

./: .directory  .gitignore  CMakeLists.txt  LICENSE  Server-Project.sln
Server-Project/: Server-Project.vcxproj  Server-Project.vcxproj.filters  main.cpp
Server-Project/include/: Connection.hpp  ConnectionManager.hpp  RequestHandler.hpp  RequestParser.hpp  Response.hpp  Server.hpp  ServerService.hpp
Server-Project/source/: Connection.cpp  ConnectionManager.cpp  Request.cpp  RequestHandler.cpp  Server.cpp  ServerService.cpp  main.cpp
Web-Server/: CMakeLists.txt  main.cpp
Web-Server-Tests/: CMakeLists.txt  RequestParserTestSuite.hpp  ServerFactoryMock.hpp  ServerMock.hpp  ServerServiceTestSuite.hpp  tests.cpp
Web-Server-tests/: tests.cpp
Web-Server/include/: Defs.hpp  Exception.hpp  Header.hpp  IConnection.hpp  IConnectionManager.hpp  IRequestHandler.hpp  IRequestParser.hpp  IResponseBuilder.hpp  IServer.hpp  IServerFactory.hpp  Request.hpp  RequestHandler.hpp  RequestParser.hpp  ResponseBuilder.hpp  ResponseEncoder.hpp  Server.hpp  ServerFactory.hpp  ServerLog.hpp  ServerService.hpp
Web-Server/source/: Connection.cpp  ConnectionManager.cpp  Exception.cpp  RequestHandler.cpp  RequestParser.cpp  ResponseBuilder.cpp  ResponseEncoder.cpp  Server.cpp  ServerFactory.cpp  ServerService.cpp
include/: Connection.hpp  ConnectionManager.hpp  Defs.hpp  Enum.hpp  Exception.hpp  IConnection.hpp  IConnectionManager.hpp  IRequest.hpp  IRequestHandler.hpp  IRequestParser.hpp  IResponse.hpp  IResponseBuilder.hpp  IResponseEncoder.hpp  Request.hpp  RequestHandler.hpp  RequestParser.hpp  Response.hpp  ResponseBuilder.hpp  ResponseEncoder.hpp  Server.hpp  ServerLog.hpp  ServerService.hpp
source/: Connection.cpp  ConnectionManager.cpp  Exception.cpp  RequestHandler.cpp  RequestParser.cpp  Response.cpp  ResponseBuilder.cpp  Server.cpp  ServerLog.cpp  ServerService.cpp  main.cpp
